   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bugs fixed
       - Fixed bug in Directory AlphaNumComparator. Reported and fixed
        by Rob Heittman.

- 1.1.4 (2009-04-06)
    - Bugs fixed
       - Fixed issue in JettyHandler mixing HTTP and HTTPS requests.
         Reported by Albert Boehmler.
       - When updating a file via the FILE connector, some deletion
         issue could occur on Windows due to JVM integration issues
         with the OS. A workaround to reduce this was to invoke the
         garbage collection. Reported by Kevin Conaway.
       - The CLAP connector didn't set the expiration date based on
         its 'timeToLive' parameter. Reported by Peter Becker.
       - Added dependencies to the fileupload and dbcp modules for 
         OSGi runtime. Reported by Rob Heittman.
       - Fixed "Content-location" header value set by the 
         DirectoryResource when files are served from a CLAP connector. 
         Reported by David Fogel.
       - Fixed starting issue with the range service.
       - Fixed POM generation issue with dependencies release version.
         Reported by Paul Austin. 
       - Fixed selector exhaustion issue with Grizzly connector.
         Reported by Bruce Lee.
       - Fixed content negotiation bug in JAX-RS extension.
         Reported by Fabio Mancinelli.
       - Fixed bug in TunnelService preventing the replacement of 
         client preferences if the HTTP header was "Accept" and not
         "accept".
       - Fixed flushing bug with WriterRepresentation and 
         SaxRepresentation classes. Reported by Tal Liron.
    - Misc
       - Updated DirectoryTestCase (tested directory are made unique).
         May help fix a bug with Windows and deleted files reported by 
         Kevin Conaway.
       - Made several JAX-RS imports optional in the OSGi manifest.
         Suggested by Hendy Irawan.  
       - Updated Jetty to version 6.1.15.